--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -47,7 +47,7 @@
         "eUKa2s8U9TYc"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJA7tWFgVDY+QGjynOWdyP",
+      "authorship_tag": "ABX9TyOwVHGeMNaVfA9vqi7UL2DC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RJTcdb67Gafx"
       },
@@ -299,7 +299,7 @@
         "id": "kffiHdAds_zj",
         "outputId": "7a81240e-84b8-41cf-941e-1fa465e793d5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "tZzz6S5aPdkY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
         "id": "wRqDCUSnvVZJ",
         "outputId": "f3db5617-069b-4aa7-e03f-c2ea760d06be"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,12 @@
       "source": [
         "logger.info(\"Installing {}\".format(\"openssh-server\"))\n",
         "cmd = [\"apt-get\", \"install\", \"openssh-server\"]\n",
-        "result = subprocess.check_output(cmd, stderr=subprocess.STDOUT)"
+        "try:\n",
+        "    result = subprocess.check_output(cmd, stderr=subprocess.STDOUT, text=True)\n",
+        "except subprocess.CalledProcessError as e:\n",
+        "    # Access the error message from the output attribute\n",
+        "    error_message = e.output\n",
+        "    print(f\"Command failed with error message: {error_message}\")"
       ],
       "metadata": {
         "colab": {
@@ -492,7 +497,7 @@
         "id": "H47CJUEjPj_I",
         "outputId": "961b4bb8-ff56-4b34-d91b-83c961aeb8ce"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +531,7 @@
       "metadata": {
         "id": "RsDuBdmkU6rJ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +557,7 @@
         "id": "6_S-0e0TP4Bm",
         "outputId": "eea49106-bddd-4d87-fb24-30d96f6842c9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +601,7 @@
       "metadata": {
         "id": "RfaHQ2mP2cnH"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +615,7 @@
       "metadata": {
         "id": "LDbc--yKfLhk"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +650,7 @@
         "id": "LgHjpcywWHBj",
         "outputId": "497d3091-f4c2-42fa-d8d6-813d61e8e7cc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +696,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,7 +817,7 @@
         "id": "anunz_InIgo3",
         "outputId": "c49a0d43-f9f6-4728-8ecf-adbdd839446d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +856,7 @@
         "id": "5UQhLUNpO4tZ",
         "outputId": "8203d0fa-f9a4-4ac3-d933-95c7cb169def"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +912,7 @@
         },
         "outputId": "28216897-1b35-43b2-c38b-0ac550610208"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,7 +963,7 @@
       "metadata": {
         "id": "2CBsVIlb0MVY"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,7 +978,7 @@
         },
         "outputId": "fcfa18a6-f144-40d8-a762-c86c96a971ad"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1041,7 +1046,7 @@
       "metadata": {
         "id": "aTy2wb3o1ECb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1077,7 @@
         },
         "outputId": "3e33ebd4-3999-48e2-bde7-dafa5c5ddb37"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1118,7 @@
         },
         "outputId": "8ca1eb61-98c1-473d-abf3-284ce608efee"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1181,7 +1186,7 @@
         },
         "outputId": "123dd6fc-9be2-474b-c9fe-3074dd9b528b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,7 +1228,7 @@
         },
         "outputId": "da066789-3f49-42cf-aec7-2331f5787387"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1253,7 +1258,7 @@
         },
         "outputId": "41beea1d-2a55-418e-8607-f3a2304f0d66"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1290,7 +1295,7 @@
         },
         "outputId": "7aac58c2-73f3-43f2-e0a0-e7ef3de5e6a9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1325,7 +1330,7 @@
         },
         "outputId": "2cb602f8-67fd-47e1-a373-60870d50db2d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1353,7 +1358,7 @@
         "id": "JCfGz6hUwKwY",
         "outputId": "3a3392d7-b00e-48cc-8595-03072cd6753d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1407,7 @@
         "id": "OhAElSOoAc7e",
         "outputId": "18078c2c-6941-4926-84f7-3a4bd01534bf"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,7 +1504,7 @@
         },
         "outputId": "03398a46-999c-4ba1-e861-6a666ccc6412"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1543,7 +1548,7 @@
         "id": "1ubxOLnv-Lg6",
         "outputId": "b77d8b7a-ac37-4795-9c06-a1f4ef857eab"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1603,7 +1608,7 @@
         "id": "S14iqwbWaZu2",
         "outputId": "e9f484d0-1e0b-4beb-fbb6-f521b3de6416"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1690,7 +1695,7 @@
         "id": "YfQiKJYEx31_",
         "outputId": "a252dc4d-67c7-43fe-d0b9-cc98c942f13f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1731,7 @@
       "metadata": {
         "id": "QYakF2Muw69p"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1743,7 +1748,7 @@
         "id": "3YrZBd0LyNW-",
         "outputId": "f96e1276-bce9-4174-e121-50273e378f5b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1801,7 +1806,7 @@
       "metadata": {
         "id": "UpLD7LCnGwnH"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1818,7 +1823,7 @@
         "id": "J2lphBm2IKMT",
         "outputId": "c7491308-3a5c-43ee-ae8e-01bb04b6396c"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1898,7 +1903,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1971,7 +1976,7 @@
         "id": "G55ah6a_ykfx",
         "outputId": "ce5226bf-eb34-4ade-a2e3-c8c19b0c6ed8"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2001,7 +2006,7 @@
         "id": "-gVz3S-9z87X",
         "outputId": "f50d31ec-270c-45ad-a02b-eef95d6b8f2b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2035,7 +2040,7 @@
         },
         "outputId": "0831bb60-4d42-4d07-f9b6-793d58adc064"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,7 +2100,7 @@
         },
         "outputId": "5ec73bab-6c56-485b-fa55-91dc66eb7ce9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2128,7 +2133,7 @@
       "metadata": {
         "id": "fs5essOg6VPZ"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2163,7 +2168,7 @@
         },
         "outputId": "2a9d3495-6b01-4cf8-d2e0-571695aef958"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2198,7 +2203,7 @@
         },
         "outputId": "fac256c7-40f8-4b81-a9c9-c526a2db8d55"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2253,7 +2258,7 @@
         },
         "outputId": "60306a12-1adf-43d1-c252-4b780462b432"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2311,7 +2316,7 @@
         },
         "outputId": "1a3ab7eb-fe5e-45f3-ff1b-c1dc0755acd6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2621,7 +2626,7 @@
         },
         "outputId": "15956586-caa3-4bec-e0fd-03bb79073a10"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2723,7 +2728,7 @@
         },
         "outputId": "ceccf59e-1f25-42ab-f8dd-16d2b882e599"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2770,7 +2775,7 @@
         "id": "CVmk40vA1riI",
         "outputId": "a215d022-50be-4a97-be75-bc624327b5a1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2835,7 +2840,7 @@
         },
         "outputId": "8477ca01-0a6c-4f97-cd71-906edf834cf0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2863,7 +2868,7 @@
         },
         "outputId": "7e3c7b4b-641f-4d27-fbb2-db431006f16f"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2972,7 +2977,7 @@
         "id": "T3_VtfasOWie",
         "outputId": "e6c33289-c728-4d9e-e05b-3927745c338b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3005,7 +3010,7 @@
         "id": "4C3xAYxxni1l",
         "outputId": "b9c7b07b-5677-4ef5-d96c-f2c817f79511"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3040,7 +3045,7 @@
         },
         "outputId": "cf75c0cd-ca7e-4baa-f0b3-f66691cdf3b4"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3076,7 +3081,7 @@
       "metadata": {
         "id": "buIQG3PUHXuZ"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3093,7 +3098,7 @@
         },
         "outputId": "6f08d4a3-c995-4378-ce15-cf91c8f8f25f"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3180,7 +3185,7 @@
         },
         "outputId": "3070a70d-3e25-412f-f4db-a6486e0ebd5d"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3215,7 +3220,7 @@
         },
         "outputId": "7b316f7d-b9d5-49e9-dcef-047728cca9e2"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3260,12 +3265,11 @@
       "metadata": {
         "id": "q7ulUTCVJnrI",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "ded32b2b-2e2a-40ef-b7be-619550b37b66"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3319,7 +3323,7 @@
         },
         "outputId": "b0e09755-61ca-41b8-af03-148ce28551e7"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3359,7 +3363,7 @@
         },
         "outputId": "4c591e78-f44e-4bd7-9a5f-2556b0e9060e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3505,7 +3509,7 @@
         "id": "oGIkeOkpBAVx",
         "outputId": "6ca9f1a4-0d22-48e6-ce98-dff77e984fb3"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3558,7 +3562,7 @@
         "id": "balbae5c51A8",
         "outputId": "1efd78be-1fb8-44fc-ce4f-4443ffc0f5e4"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3599,7 +3603,7 @@
         "id": "b4GXSJzpoaq_",
         "outputId": "44f6032e-7e66-49dd-f35f-198401c7356d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3640,7 +3644,7 @@
         "id": "EMOASbQdQG6o",
         "outputId": "4f05443f-ec60-4d50-d09a-c2f45f15eed0"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3684,7 +3688,7 @@
         "id": "l9a7rTPfFFIv",
         "outputId": "6488b7ff-050d-4f23-c160-36f7a80eb54f"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3717,7 +3721,7 @@
         "id": "FHMKvuulFQiM",
         "outputId": "0336cd23-7121-463a-8e12-1e88f5c87d4e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3754,7 +3758,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3781,7 +3785,7 @@
         "id": "SNqvsygfb8zf",
         "outputId": "0125cab4-93af-4163-f14f-2fed2a403d5d"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3826,7 +3830,7 @@
         "id": "s3l5NjHmYXHr",
         "outputId": "090d5780-1eef-49e2-d90c-56eebcd28bd4"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3888,7 +3892,7 @@
         "id": "s7jPk8BlZmi4",
         "outputId": "3c70f7ce-83ac-411f-9612-a0bf7225f6b9"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3914,7 +3918,7 @@
         "id": "z-cMi-F7Z2zl",
         "outputId": "b31ff0c4-5084-4456-a187-b9aa39b67ed6"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3960,7 +3964,7 @@
         "id": "8hwWDuvjZQRo",
         "outputId": "4f9ba0d3-27ad-41e3-99e1-82622a2e186a"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3985,7 +3989,7 @@
         "id": "Ox-CT1o-ZURT",
         "outputId": "6d396078-6df8-41d5-a703-7c86ad5e1633"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4017,7 +4021,7 @@
         "id": "8e1V3XWrYX1d",
         "outputId": "245d7237-8bc0-4937-f78e-5f971960e61c"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4114,7 +4118,7 @@
         "id": "zdm3ZXATcA8a",
         "outputId": "f4b51992-702d-4456-ca85-aa4b0f3fcf0e"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
