--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -47,7 +47,7 @@
         "eUKa2s8U9TYc"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwVHGeMNaVfA9vqi7UL2DC",
+      "authorship_tag": "ABX9TyM8jawpKkAo20Dj6uF0lKem",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,7 +205,8 @@
       "cell_type": "markdown",
       "source": [
         "# About this tutorial\n",
-        "This deliberately takes a detailed and sometimes tedious approach in order to offer a comprehensive tutorial experience.\n",
+        "\n",
+        "This tutorial deliberately takes a detailed and sometimes tedious approach in order to offer a comprehensive tutorial experience.\n",
         "\n",
         "The intention is to help you learn thoroughly and understand the motivations behind each step. By embracing this comprehensive exploration, you can enhance your understanding of the subject matter, even if it may seem a bit pedantic at times, and grasp the significance of every action in the tutorial.\n",
         "\n",
@@ -521,6 +522,9 @@
       "cell_type": "code",
       "source": [
         "ssh_config_file = \"/etc/ssh/ssh_config\"\n",
+        "# in Colab it already has the needed permissions -rw-r--r--\n",
+        "if not IN_COLAB:\n",
+        "    os.chmod(ssh_config_file, int('644', base=8))\n",
         "with open(ssh_config_file, \"r+\") as f:\n",
         "    var = 'StrictHostKeyChecking no'\n",
         "    line_found = any(line.strip().startswith(var) for line in f)\n",
@@ -1940,15 +1944,6 @@
       ],
       "metadata": {
         "id": "-d3dV6kEzPhi"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Check for `java` listening to a specific port"
-      ],
-      "metadata": {
-        "id": "frlAsILEtsEH"
       }
     },
     {
