--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -47,7 +47,7 @@
         "eUKa2s8U9TYc"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8jawpKkAo20Dj6uF0lKem",
+      "authorship_tag": "ABX9TyOuBMT4ps8Du6S/WvJPP5ri",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,11 +521,9 @@
     {
       "cell_type": "code",
       "source": [
-        "ssh_config_file = \"/etc/ssh/ssh_config\"\n",
-        "# in Colab it already has the needed permissions -rw-r--r--\n",
-        "if not IN_COLAB:\n",
-        "    os.chmod(ssh_config_file, int('644', base=8))\n",
-        "with open(ssh_config_file, \"r+\") as f:\n",
+        "if IN_COLAB:\n",
+        "  ssh_config_file = \"/etc/ssh/ssh_config\"\n",
+        "  with open(ssh_config_file, \"r+\") as f:\n",
         "    var = 'StrictHostKeyChecking no'\n",
         "    line_found = any(line.strip().startswith(var) for line in f)\n",
         "    if not line_found:\n",
@@ -552,7 +550,12 @@
       "source": [
         "logger.info(\"Starting {}\".format(\"openssh-server\"))\n",
         "cmd = [\"/etc/init.d/ssh\", \"restart\"]\n",
-        "result = subprocess.check_output(cmd, stderr=subprocess.STDOUT)"
+        "try:\n",
+        "    result = subprocess.check_output(cmd, stderr=subprocess.STDOUT, text=True)\n",
+        "except subprocess.CalledProcessError as e:\n",
+        "    # Access the error message from the output attribute\n",
+        "    error_message = e.output\n",
+        "    print(f\"Command failed with error message: {error_message}\")\n"
       ],
       "metadata": {
         "colab": {
