--- a/PySpark_On_Google_Colab.ipynb
+++ b/PySpark_On_Google_Colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlrkdJyOPyGzFasu8sc8NZ",
+      "authorship_tag": "ABX9TyMWYnc5nTQOi0uYnY/y13Ng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,7 +168,7 @@
         "id": "6TqYCjb_491t",
         "outputId": "eb4a32b7-f740-4446-998f-6e46c8e711ef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
       "metadata": {
         "id": "BBSd3MIShROn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
         "id": "qrjlhtS4FMlb",
         "outputId": "9386a17b-9e13-4d92-cf17-f63bccc8b650"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "axuD_4Z94lRr",
         "colab": {
@@ -360,7 +360,7 @@
         "id": "6B0dFZxSCN03",
         "outputId": "9d1bbf4f-93f4-474e-a643-8de3802dbb3f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         "id": "jQoDrLyFDuuM",
         "outputId": "e8be6c4a-cf31-4b2b-dafe-6dcaf3f9f6e9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "Dn_LAdFDXIGm",
         "outputId": "f4e6ddba-653d-4975-f80f-3151d34dba53"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,7 @@
         "id": "QG2hwA6UtetQ",
         "outputId": "d3cbc72a-91f0-4419-e902-71b0344e7447"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +625,7 @@
         "id": "EqmesIYKX313",
         "outputId": "792382c3-a5b0-4718-ca7b-b7acec752738"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +675,7 @@
         "id": "R4Mlv3S4ZBIN",
         "outputId": "c2d53ed9-3740-452c-f02c-458acf3c2960"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "id": "LadpCYYlncgz",
         "outputId": "6e1368cd-d546-4bf3-d47e-bb510479ef7b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
         "id": "JYAB6j7hmrH_",
         "outputId": "50028946-9612-48e3-9fdb-7b2f954b5bf6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
         "id": "t8RJTNTnbEBV",
         "outputId": "1d91dfe0-fcfc-4dfc-fb14-10d7b7042a7a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,7 +820,7 @@
         "id": "YCMjNanOYgNf",
         "outputId": "2774232c-904f-41a2-a6f4-552fbb0ed649"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,7 +878,7 @@
         "id": "MOLcR7v4Zd81",
         "outputId": "eead1803-3497-4454-a917-6bec75651f85"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +926,7 @@
         "id": "_QZ1uQ5xhWJc",
         "outputId": "8fd77a2b-e81e-444a-9408-e74cc8eef965"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +979,7 @@
         "id": "aCRIvYQMaMXh",
         "outputId": "57450011-0aea-4689-9028-44a02b262ce4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1170,7 @@
         "id": "b3vnafiB3Nol",
         "outputId": "0235d7bc-9fa1-4adb-f56f-56a5b6bf697a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,7 +1254,7 @@
         "id": "f6SONGq6iYWh",
         "outputId": "49c219c2-79ca-470b-9de4-fb298b0f6eef"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1325,7 +1325,7 @@
         "id": "TUICNKRD8w2N",
         "outputId": "928b066b-203e-4fc3-8a9c-edcf307a311f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1363,7 @@
       "metadata": {
         "id": "eIocj4AV9U3J"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1392,7 +1392,7 @@
       "metadata": {
         "id": "ARcIX5q892IV"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1427,7 +1427,7 @@
         "id": "XgKzdtjL-3kg",
         "outputId": "c8babb5e-ac97-46e8-8da9-e73b2d6e92b6"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1459,7 @@
         "id": "CU6bJTS9_jPC",
         "outputId": "c3156023-0d39-40d0-b0f7-dda3b751a1de"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1539,7 +1539,7 @@
       "metadata": {
         "id": "6V1A8rlhej4o"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,7 +1563,7 @@
         "id": "vOkJbZadfL6d",
         "outputId": "771cf87d-5fb8-4ad8-91d2-4e339fd22c97"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1617,7 +1617,7 @@
         "id": "tw6Ti5SLfCko",
         "outputId": "671ed581-fc09-4a78-8fcf-ae00126eb24a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1689,7 +1689,7 @@
         "id": "LnCRk5msdTGW",
         "outputId": "27c72be4-6b9b-443a-a8da-6a758ae9ad8d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1714,7 +1714,7 @@
         "id": "6cGYE9xmd2wk",
         "outputId": "7f4554b0-6b2a-4d37-e00b-e92f006f5eb4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1756,7 @@
         "id": "Sq5GBGFyfLxZ",
         "outputId": "18192bd5-1abf-43ce-a10f-029a93038adf"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1868,7 +1868,7 @@
         "id": "sgxWkKHhJ9Oo",
         "outputId": "8706d49f-adfa-4d2d-a8f9-cdaea4d6b185"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1904,7 +1904,7 @@
         "id": "w3nrdPlVLUp3",
         "outputId": "034a1eb6-d99d-4b9c-b41e-bfc9a940f3af"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1962,7 +1962,7 @@
         "id": "VW8itYd_K9vl",
         "outputId": "639ebe0e-8353-436a-c2fe-1737467dc20f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2023,7 +2023,7 @@
         "id": "zP0l2ObclYle",
         "outputId": "ae7966ea-cf0c-4c7e-9392-5ce6834c9abb"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2081,7 +2081,7 @@
         "id": "WHBj_dXzlE0Y",
         "outputId": "dd5a6b0e-8992-455f-fc2a-69eef078b703"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2282,7 +2282,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pyspark"
+        "# uncomment the next line for running the interactive PySpark shell\n",
+        "#!pyspark"
       ],
       "metadata": {
         "colab": {
@@ -2291,7 +2292,7 @@
         "id": "bIFxn2REnbrR",
         "outputId": "e1cd06fe-d906-431a-d3f4-99b4ce5b5c4e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2421,7 +2422,7 @@
         "id": "YdG3odca2udL",
         "outputId": "ffb52780-dd5a-4c5f-d3e5-6b92ac023ef1"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2538,7 +2539,7 @@
         "id": "stGcRrEF7eqq",
         "outputId": "82b8f0b8-f7aa-4d74-ffc8-bf8decb754bf"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2612,7 +2613,7 @@
           "height": 34
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2684,7 +2685,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2719,7 +2720,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2745,7 +2746,7 @@
         "id": "44fIwIqZr2Td",
         "outputId": "c4710498-fc32-47cc-c869-bc81849614c2"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2820,7 +2821,7 @@
         "id": "9LHzqIvxgnjP",
         "outputId": "faa0461f-a881-4f3e-d225-989b76f54bc9"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2834,7 +2835,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Extract the History Server's log filename and loog at the History Server's log."
+        "Extract the History Server's log filename and look at the History Server's log."
       ],
       "metadata": {
         "id": "8EsqqenXyImb"
@@ -2843,8 +2844,8 @@
     {
       "cell_type": "code",
       "source": [
-        "%%bash\n",
-        "HISTORY_SERVER_LOG=$(cat start_history_server.log |awk '{print $NF}')\n",
+        "%%bash --no-raise-error\n",
+        "HISTORY_SERVER_LOG=$(cut -d' ' -f5 start_history_server.log)\n",
         "echo $HISTORY_SERVER_LOG\n",
         "cat $HISTORY_SERVER_LOG"
       ],
@@ -2855,7 +2856,7 @@
         "id": "ZH0OIYLMhKYV",
         "outputId": "a4d19a06-d91d-4c0e-a6a0-6db9aba6d47c"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2906,7 +2907,7 @@
         "id": "VucW143XzD91",
         "outputId": "c2c166b0-d5ab-47f3-dde7-34c2f452a014"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2966,7 +2967,7 @@
       "metadata": {
         "id": "-z3ioP_szxT1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2981,7 +2982,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%%bash\n",
+        "%%bash --no-raise-error\n",
         "# first stop it in case it's already running\n",
         "$SPARK_HOME/sbin/stop-history-server.sh\n",
         "$SPARK_HOME/sbin/start-history-server.sh |tee start_history_server.log\n",
@@ -2996,7 +2997,7 @@
         "id": "RUYUdvxN6WGD",
         "outputId": "2fa99ec4-4a07-4a19-f499-0f3f54ba55c7"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3034,7 +3035,7 @@
         "id": "Cu6CFarkjtsA",
         "outputId": "9b4dff2a-ad25-471f-a439-08d5bcc8751a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3103,7 +3104,7 @@
         "id": "pRTxAnMt7DUr",
         "outputId": "d286f319-a4d8-401b-c789-6fd0feaf8054"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3162,7 +3163,7 @@
       "metadata": {
         "id": "-gSkzQV07dda"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3177,8 +3178,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%%bash\n",
-        "\n",
+        "%%bash --no-raise-error\n",
         "# first stop it in case it's already running\n",
         "$SPARK_HOME/sbin/stop-history-server.sh\n",
         "$SPARK_HOME/sbin/start-history-server.sh |tee start_history_server.log\n",
@@ -3194,7 +3194,7 @@
         "id": "hXg7GUP89aoM",
         "outputId": "6452b7f1-fbcd-444d-e204-e0e451bbda33"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3325,7 +3325,7 @@
       "metadata": {
         "id": "ubPRc79IzDXx"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3349,7 +3349,7 @@
         "id": "UBqYMHE6MFll",
         "outputId": "83cdb204-b0bd-4840-e861-d43d5c50481b"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
