--- a/Hadoop_single_node_cluster_setup_Python.ipynb
+++ b/Hadoop_single_node_cluster_setup_Python.ipynb
@@ -47,7 +47,6 @@
         "eUKa2s8U9TYc"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuBMT4ps8Du6S/WvJPP5ri",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2580,7 +2579,7 @@
         "Some useful links for configuring YARN:\n",
         "\n",
         "*   https://hadoop.apache.org/docs/current/hadoop-project-dist/hadoop-common/SingleCluster.html#YARN_on_a_Single_Node\n",
-        "* https://hadoop.apache.org/docs/r3.0.0/hadoop-yarn/hadoop-yarn-common/yarn-default.xml\n",
+        "* https://hadoop.apache.org/docs/stable/hadoop-yarn/hadoop-yarn-common/yarn-default.xml\n",
         "*   https://hadoop.apache.org/docs/current/hadoop-yarn/hadoop-yarn-site/WebApplicationProxy.html\n",
         "\n"
       ],
@@ -2687,8 +2686,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Some explanations\n",
-        "\n",
+        "### Some explanations"
+      ],
+      "metadata": {
+        "id": "hs3L8hhzzwzP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**`yarn.web-proxy.address`** is needed so that `start-yarn.sh` also launches the Web proxy (needed for navigating the different Web services). Here is the relevant code from `start-yarn.sh`:\n",
         "\n",
         "```\n",
@@ -2711,7 +2717,7 @@
         "    hdfs getconf -confKey  yarn.web-proxy.address"
       ],
       "metadata": {
-        "id": "hs3L8hhzzwzP"
+        "id": "Rl8VVIo-7UG2"
       }
     },
     {
@@ -2736,6 +2742,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**`yarn.log-aggregation-enable`** needs to be set to `true` (by default it is `false`) in order to be able to view the logs of the application after it's completed using the command\n",
+        "\n",
+        "    yarn logs -applicationId <app ID>\n",
+        "    \n",
+        "When log aggregation is enabled, log files are collated from local containers to a central location (see [Running on YARN/Debugging your application](https://spark.apache.org/docs/3.5.0/running-on-yarn.html#debugging-your-application))."
+      ],
+      "metadata": {
+        "id": "aUhcpNlk1Vk_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**`yarn.log-aggregation.retain-seconds`** determines how long to keep aggregation logs before deleting them. I configured 10 minutes for this tutorial.\n",
+        "\n",
+        "**`yarn.log-aggregation.retain-check-interval-seconds`** from [yarn-default.xml](https://hadoop.apache.org/docs/stable/hadoop-yarn/hadoop-yarn-common/yarn-default.xml) How long to wait between aggregated log retention checks. If set to 0 or a negative value then the value is computed as one-tenth of the aggregated log retention time. Be careful set this too small and you will spam the name node."
+      ],
+      "metadata": {
+        "id": "3C5LvL-o3WWX"
+      }
     },
     {
       "cell_type": "markdown",
